objects/BMCServiceDesk__BMC_ComputerSystem__c.object
<CustomObject>
    <description>BMC_ComputerSystem. CMDB Class that stores configuration items (CIs) relating to collections of managed system elements. The managed system elements provide computing capabilities and serve as aggregation points to relate one or more of the following elements: file systems, operating systems, processors, and memory (volatile storage, nonvolatile, or storage).  T</description>
    <fields>
        <fullName>BMCServiceDesk__AdminPasswordStatus__c</fullName>
        <label>Admin Password Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Not Implemented</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BootROMSupported__c</fullName>
        <label>Boot ROM Supported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CapabilityList__c</fullName>
        <label>Capability List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChassisBootupState__c</fullName>
        <label>Chassis Bootup State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationOptions__c</fullName>
        <label>Configuration Options</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DHCPUse__c</fullName>
        <label>DHCP Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataRate__c</fullName>
        <label>Data Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Domain__c</fullName>
        <label>Domain</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnvironmentSpecification__c</fullName>
        <label>Environment Specification</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExpansionInterface__c</fullName>
        <label>Expansion Interface</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Expansion__c</fullName>
        <label>Expansion</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirmwareVersion__c</fullName>
        <label>Firmware Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FlashMemory__c</fullName>
        <label>Flash Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Frequency__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HostName__c</fullName>
        <label>Host Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputCurrent__c</fullName>
        <label>Input Current</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputVoltage__c</fullName>
        <label>Input Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxConsumption__c</fullName>
        <label>Maximum Consumption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaSupported__c</fullName>
        <label>Media Supported</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfSlots__c</fullName>
        <label>Number Of Slots</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherCapabilityDescription__c</fullName>
        <label>Other Capability Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PortsPerSlot__c</fullName>
        <label>Ports Per Slot</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrimaryCapability__c</fullName>
        <label>Primary Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Dedicated</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Layer 3 Switch</fullName>
                </value>
                <value>
                    <fullName>Central Office Switch</fullName>
                </value>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Access Server</fullName>
                </value>
                <value>
                    <fullName>Firewall</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>I/O</fullName>
                </value>
                <value>
                    <fullName>Web Caching</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Block Server</fullName>
                </value>
                <value>
                    <fullName>File Server</fullName>
                </value>
                <value>
                    <fullName>Mobile User Device</fullName>
                </value>
                <value>
                    <fullName>Repeater</fullName>
                </value>
                <value>
                    <fullName>Bridge/Extender</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>LoadBalancer</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>SANSwitch</fullName>
                </value>
                <value>
                    <fullName>SANHub</fullName>
                </value>
                <value>
                    <fullName>SANBridge</fullName>
                </value>
                <value>
                    <fullName>SANRouter</fullName>
                </value>
                <value>
                    <fullName>SANDirectorRAIDStorageDevice</fullName>
                </value>
                <value>
                    <fullName>Virtual Tape Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetCapability__c</fullName>
        <label>Reset Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetCount__c</fullName>
        <label>Reset Count</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResetLimit__c</fullName>
        <label>Reset Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemOID__c</fullName>
        <label>System OID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemType__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X86-based PC</fullName>
                </value>
                <value>
                    <fullName>MIPS-based PC</fullName>
                </value>
                <value>
                    <fullName>Alpha-based PC</fullName>
                </value>
                <value>
                    <fullName>Power PCSH-x PC</fullName>
                </value>
                <value>
                    <fullName>StrongARM PC</fullName>
                </value>
                <value>
                    <fullName>64-bit Intel PC</fullName>
                </value>
                <value>
                    <fullName>64-bit Alpha PC</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>X86-Nec98 PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ThermalState__c</fullName>
        <label>Thermal State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalPhysicalMemory__c</fullName>
        <label>Total Physical Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VirtualSystemType__c</fullName>
        <label>Virtual System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>LPAR</fullName>
                </value>
                <value>
                    <fullName>VM/VM Guest</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Xen</fullName>
                </value>
                <value>
                    <fullName>LDOM</fullName>
                </value>
                <value>
                    <fullName>Solaris Container</fullName>
                </value>
                <value>
                    <fullName>HP nPartitions</fullName>
                </value>
                <value>
                    <fullName>VPar</fullName>
                </value>
                <value>
                    <fullName>Microsoft Hyper-V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Workgroup__c</fullName>
        <label>Workgroup</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Computer System</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_ComputerSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>